# perplexity.ai-cli

./: .gitignore  CHANGELOG.md  LICENSE  MANIFEST.in  README.md  install.py  install.sh  perplexity-cli.py  perplexity.ai-cli.py  perplexity_cli.py  pyproject.toml  setup.py
