[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "perplexity-cli"
dynamic = ["version"]
description = "A command-line interface for Perplexity AI with web search capabilities"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "zahidoverflow", email = "imzooel@gmail.com"}
]
maintainers = [
    {name = "zahidoverflow", email = "imzooel@gmail.com"}
]
keywords = [
    "perplexity", "ai", "cli", "chatbot", "assistant", "search",
    "command-line", "pipx", "artificial-intelligence", "web-search"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Communications :: Chat",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Utilities",
]
requires-python = ">=3.7"
dependencies = [
    "websocket-client>=1.6.0",
    "requests>=2.28.0",
]

[project.urls]
Homepage = "https://github.com/zahidoverflow/perplexity-cli"
Repository = "https://github.com/zahidoverflow/perplexity-cli"
Documentation = "https://github.com/zahidoverflow/perplexity-cli#readme"
"Bug Reports" = "https://github.com/zahidoverflow/perplexity-cli/issues"
Changelog = "https://github.com/zahidoverflow/perplexity-cli/blob/main/CHANGELOG.md"

[project.scripts]
perplexity-cli = "perplexity_cli:main"
pplx = "perplexity_cli:main"

[tool.setuptools]
py-modules = ["perplexity_cli"]

[tool.setuptools.dynamic]
version = {attr = "perplexity_cli.__version__"}
